--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-intersection-observer": "^8.32.2",
     "react-locomotive-scroll": "^0.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
