--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "craco": "0.0.3",
+    "framer-motion": "^4.1.17",
     "gsap": "file:gsap-bonus.tgz",
     "jquery": "^3.6.0",
     "locomotive-scroll": "^4.1.3",
@@ -15,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.5",
     "react-locomotive-scroll": "^0.2.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
