--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.5",
     "react-locomotive-scroll": "^0.2.0",
+    "react-lottie": "^1.2.3",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
