--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-spectrum": "^1.2.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
