--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "file:gsap-bonus.tgz",
     "jquery": "^3.6.0",
     "locomotive-scroll": "^4.1.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.5",
