--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.2.1",
     "react-intersection-observer": "^8.32.5",
     "react-locomotive-scroll": "^0.2.0",
     "react-lottie": "^1.2.3",
