--- a/package.json
+++ b/package.json
@@ -18,14 +18,10 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-fast-marquee": "^1.2.1",
-    "react-intersection-observer": "^8.32.5",
     "react-locomotive-scroll": "^0.2.0",
-    "react-lottie": "^1.2.3",
-    "react-masonry-css": "^1.0.16",
+    "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "react-spectrum": "^1.2.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
