--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-locomotive-scroll": "^0.2.0",
     "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.0.2",
