--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.3",
+    "@react-three/drei": "^8.3.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -23,8 +24,10 @@
     "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-three-fiber": "^6.0.13",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
+    "three": "^0.135.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
