--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "craco": "0.0.3",
     "gsap": "file:gsap-bonus.tgz",
@@ -27,6 +26,7 @@
     "react-three-fiber": "^6.0.13",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
+    "svg-loaders-react": "^2.2.1",
     "three": "^0.135.0",
     "web-vitals": "^1.1.2"
   },
