--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.6.0",
     "locomotive-scroll": "^4.1.3",
     "lodash": "^4.17.21",
+    "matter-js": "^0.18.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
