--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/jest-dom": "^5.15.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
+		"axios": "^0.26.0",
 		"classnames": "^2.3.1",
 		"craco": "0.0.3",
 		"express": "^4.17.2",
@@ -24,6 +25,7 @@
 		"react-helmet": "^6.1.0",
 		"react-locomotive-scroll": "^0.2.0",
 		"react-marquee-slider": "^1.1.5",
+		"react-parallax-tilt": "^1.6.0",
 		"react-router-dom": "^6.0.2",
 		"react-scripts": "4.0.3",
 		"react-three-fiber": "^6.0.13",
