--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
+		"react-intersection-observer": "^8.33.1",
 		"react-locomotive-scroll": "^0.2.0",
 		"react-marquee-slider": "^1.1.5",
 		"react-parallax-tilt": "^1.6.0",
