--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-router-dom": "^6.0.2",
 		"react-scripts": "4.0.3",
 		"react-three-fiber": "^6.0.13",
+		"react-tilt": "^0.1.4",
 		"react-transition-group": "^4.4.2",
 		"styled-components": "^5.3.3",
 		"svg-loaders-react": "^2.2.1",
