--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
 		"matter-js": "^0.18.0",
 		"nodemon": "^2.0.15",
 		"react": "^17.0.2",
+		"react-cookie": "^4.1.1",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-intersection-observer": "^8.33.1",
 		"react-locomotive-scroll": "^0.2.0",
 		"react-marquee-slider": "^1.1.5",
 		"react-parallax-tilt": "^1.6.0",
+		"react-router": "^6.2.1",
 		"react-router-dom": "^6.0.2",
 		"react-scripts": "4.0.3",
 		"react-three-fiber": "^6.0.13",
@@ -35,6 +37,7 @@
 		"styled-components": "^5.3.3",
 		"svg-loaders-react": "^2.2.1",
 		"three": "^0.135.0",
+		"universal-cookie": "^4.0.4",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
