--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"react": "^17.0.2",
 		"react-cookie": "^4.1.1",
 		"react-dom": "^17.0.2",
-		"react-helmet": "^6.1.0",
+		"react-helmet-async": "^1.2.3",
 		"react-intersection-observer": "^8.33.1",
 		"react-locomotive-scroll": "^0.2.0",
 		"react-marquee-slider": "^1.1.5",
