--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
 		"jquery": "^3.6.0",
 		"locomotive-scroll": "^4.1.3",
 		"lodash": "^4.17.21",
+		"masonic": "^3.6.2",
 		"matter-js": "^0.18.0",
 		"nodemon": "^2.0.15",
 		"react": "^17.0.2",
+		"react-columns": "^1.2.1",
 		"react-cookie": "^4.1.1",
 		"react-dom": "^17.0.2",
 		"react-helmet-async": "^1.2.3",
