--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-router": "^6.2.1",
 		"react-router-dom": "^6.0.2",
 		"react-scripts": "4.0.3",
+		"react-string-replace": "^0.4.4",
 		"react-three-fiber": "^6.0.13",
 		"react-tilt": "^0.1.4",
 		"react-transition-group": "^4.4.2",
