--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.7.0",
 		"@emotion/styled": "^11.6.0",
+		"@material-ui/styles": "^4.11.4",
 		"@mui/icons-material": "^5.4.4",
 		"@mui/material": "^5.4.2",
 		"@react-three/drei": "^8.3.1",
