--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-intersection-observer": "^8.33.1",
 		"react-locomotive-scroll": "^0.2.0",
 		"react-marquee-slider": "^1.1.5",
+		"react-material-ui-carousel": "^3.2.0",
 		"react-parallax-tilt": "^1.6.0",
 		"react-router": "^6.2.1",
 		"react-router-dom": "^6.0.2",
