--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"react-transition-group": "^4.4.2",
 		"styled-components": "^5.3.3",
 		"svg-loaders-react": "^2.2.1",
+		"swiper": "^8.0.6",
 		"three": "^0.135.0",
 		"universal-cookie": "^4.0.4",
 		"web-vitals": "^1.1.2"
