--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@emotion/styled": "^11.6.0",
 		"@material-ui/styles": "^4.11.4",
 		"@mui/icons-material": "^5.4.4",
+		"@mui/lab": "^5.0.0-alpha.71",
 		"@mui/material": "^5.4.2",
 		"@react-three/drei": "^8.3.1",
 		"@testing-library/jest-dom": "^5.15.0",
