Begin reconfiguring code base

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"lodash": "^4.17.21",
 		"masonic": "^3.6.2",
 		"matter-js": "^0.18.0",
+		"node-sass": "^7.0.1",
 		"nodemon": "^2.0.15",
 		"react": "^17.0.2",
 		"react-columns": "^1.2.1",
@@ -37,6 +38,8 @@
 		"react-three-fiber": "^6.0.13",
 		"react-tilt": "^0.1.4",
 		"react-transition-group": "^4.4.2",
+		"sass": "^1.49.9",
+		"sass-loader": "^12.6.0",
 		"styled-components": "^5.3.3",
 		"svg-loaders-react": "^2.2.1",
 		"three": "^0.135.0",
