--- a/package.json
+++ b/package.json
@@ -1,78 +1,98 @@
 {
-	"name": "frontend",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@emotion/react": "^11.7.0",
-		"@emotion/styled": "^11.6.0",
-		"@mui/material": "^5.4.2",
-		"@react-three/drei": "^8.3.1",
-		"@testing-library/jest-dom": "^5.15.0",
-		"@testing-library/react": "^11.2.7",
-		"@testing-library/user-event": "^12.8.3",
-		"axios": "^0.26.0",
-		"classnames": "^2.3.1",
-		"craco": "0.0.3",
-		"express": "^4.17.2",
-		"gsap": "file:gsap-bonus.tgz",
-		"jquery": "^3.6.0",
-		"locomotive-scroll": "^4.1.3",
-		"lodash": "^4.17.21",
-		"masonic": "^3.6.2",
-		"matter-js": "^0.18.0",
-		"node-sass": "^7.0.1",
-		"nodemon": "^2.0.15",
-		"react": "^17.0.2",
-		"react-columns": "^1.2.1",
-		"react-cookie": "^4.1.1",
-		"react-dom": "^17.0.2",
-		"react-helmet-async": "^1.2.3",
-		"react-intersection-observer": "^8.33.1",
-		"react-locomotive-scroll": "^0.2.0",
-		"react-marquee-slider": "^1.1.5",
-		"react-parallax-tilt": "^1.6.0",
-		"react-router": "^6.2.1",
-		"react-router-dom": "^6.0.2",
-		"react-scripts": "4.0.3",
-		"react-string-replace": "^0.4.4",
-		"react-three-fiber": "^6.0.13",
-		"react-tilt": "^0.1.4",
-		"react-transition-group": "^4.4.2",
-		"sass": "^1.49.9",
-		"sass-loader": "^12.6.0",
-		"styled-components": "^5.3.3",
-		"svg-loaders-react": "^2.2.1",
-		"three": "^0.135.0",
-		"universal-cookie": "^4.0.4",
-		"web-vitals": "^1.1.2"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"server-start": "nodemon src/server/server.js"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"uglifyjs-webpack-plugin": "^2.2.0",
-		"webpack-cli": "^4.9.1"
-	}
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.2",
+    "@react-three/drei": "^8.3.1",
+    "@storybook/react": "^6.4.19",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.0",
+    "classnames": "^2.3.1",
+    "craco": "0.0.3",
+    "express": "^4.17.2",
+    "gsap": "file:gsap-bonus.tgz",
+    "jquery": "^3.6.0",
+    "locomotive-scroll": "^4.1.3",
+    "lodash": "^4.17.21",
+    "masonic": "^3.6.2",
+    "matter-js": "^0.18.0",
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.15",
+    "react": "^17.0.2",
+    "react-columns": "^1.2.1",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.3",
+    "react-intersection-observer": "^8.33.1",
+    "react-locomotive-scroll": "^0.2.0",
+    "react-marquee-slider": "^1.1.5",
+    "react-parallax-tilt": "^1.6.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "4.0.3",
+    "react-string-replace": "^0.4.4",
+    "react-three-fiber": "^6.0.13",
+    "react-tilt": "^0.1.4",
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "styled-components": "^5.3.3",
+    "svg-loaders-react": "^2.2.1",
+    "three": "^0.135.0",
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "server-start": "nodemon src/server/server.js",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/node-logger": "^6.4.19",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/testing-library": "0.0.9",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
