--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
+    "react-instagram-embed": "^3.0.0",
     "react-intersection-observer": "^8.33.1",
     "react-locomotive-scroll": "^0.2.0",
     "react-marquee-slider": "^1.1.5",
