--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react-instagram-embed": "^3.0.0",
     "react-intersection-observer": "^8.33.1",
     "react-locomotive-scroll": "^0.2.0",
+    "react-markdown": "^8.0.1",
     "react-marquee-slider": "^1.1.5",
     "react-parallax-tilt": "^1.6.0",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^3.0.5",
     "react-string-replace": "^0.4.4",
     "react-three-fiber": "^6.0.13",
     "react-tilt": "^0.1.4",
