--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-markdown": "^8.0.1",
     "react-marquee-slider": "^1.1.5",
     "react-parallax-tilt": "^1.6.0",
+    "react-reveal": "^1.2.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
