--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-columns": "^1.2.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-draggable-slider": "^0.1.6",
+    "react-fast-marquee": "^1.3.1",
     "react-helmet-async": "^1.2.3",
     "react-instagram-embed": "^3.0.0",
     "react-intersection-observer": "^8.33.1",
