--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.1",
     "craco": "0.0.3",
     "express": "^4.17.2",
+    "glsl-noise": "0.0.0",
     "gsap": "file:gsap-bonus.tgz",
     "jquery": "^3.6.0",
     "locomotive-scroll": "^4.1.3",
@@ -50,7 +51,7 @@
     "sass-loader": "^12.6.0",
     "styled-components": "^5.3.3",
     "svg-loaders-react": "^2.2.1",
-    "three": "^0.135.0",
+    "three": "^0.117.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
