--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-columns": "^1.2.1",
     "react-cookie": "^4.1.1",
+    "react-delay-link": "^1.1.6",
     "react-dom": "^17.0.2",
     "react-draggable-slider": "^0.1.6",
     "react-fast-marquee": "^1.3.1",
