--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "jquery": "^3.6.0",
     "locomotive-scroll": "^4.1.3",
     "lodash": "^4.17.21",
+    "mui-markdown": "^0.5.3",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
+    "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-columns": "^1.2.1",
     "react-cookie": "^4.1.1",
