--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-locomotive-scroll": "^0.2.0",
     "react-markdown": "^8.0.1",
     "react-marquee-slider": "^1.1.5",
+    "react-material-ui-carousel": "^3.3.3",
     "react-reveal": "^1.2.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.0.2",
