--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-markdown": "^8.0.1",
     "react-marquee-slider": "^1.1.5",
     "react-material-ui-carousel": "^3.3.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.0.2",
