--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^3.0.5",
     "react-string-replace": "^0.4.4",
+    "react-swipeable-views": "^0.14.0",
     "react-transition-group": "^4.4.2",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
