Begin implementing graphql

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_API_URL=https://glacial-river-52194.herokuapp.com/api
+REACT_APP_GRAPHQL_URI=https://localhost:1337/graphql
 REACT_APP_INSTA_GRAPH_ROOT=https://graph.instagram.com
 REACT_APP_INSTA_API_ROOT=https://api.instagram.com
 REACT_APP_INSTA_USERID=5009538929167034
