--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@apollo/client": "^3.5.10",
 		"@emotion/react": "^11.7.0",
 		"@emotion/styled": "^11.6.0",
 		"@mui/icons-material": "^5.6.0",
@@ -16,6 +17,7 @@
 		"classnames": "^2.3.1",
 		"craco": "0.0.3",
 		"express": "^4.17.2",
+		"graphql": "^16.3.0",
 		"gsap": "file:gsap-bonus.tgz",
 		"jquery": "^3.6.0",
 		"locomotive-scroll": "^4.1.3",
