Clean up console errors

--- a/.env
+++ b/.env
@@ -8,5 +8,6 @@ REACT_APP_INSTA_APPID=385083293268706
 REACT_APP_INSTA_APPSECRET=03884e435da635ebbc8a06d8a1597071
 REACT_APP_INSTA_APPREDIRECT=https://www.eyesandearsagency.com
 REACT_APP_INSTA_MEDIAID=17931628945674462
+DISABLE_ESLINT_PLUGIN=true
 
 
