--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"classnames": "^2.3.1",
 		"craco": "0.0.3",
 		"express": "^4.17.2",
+		"framer-motion": "^4.1.17",
 		"graphql": "^16.3.0",
 		"gsap": "file:gsap-bonus.tgz",
 		"jquery": "^3.6.0",
@@ -41,10 +42,9 @@
 		"react-markdown": "^8.0.1",
 		"react-marquee-slider": "^1.1.5",
 		"react-material-ui-carousel": "^3.3.3",
-		"react-responsive-carousel": "^3.2.23",
 		"react-reveal": "^1.2.2",
 		"react-router": "^6.2.1",
-		"react-router-dom": "^6.0.2",
+		"react-router-dom": "^6.3.0",
 		"react-scripts": "4.0.3",
 		"react-scroll-parallax": "^3.0.5",
 		"react-string-replace": "^0.4.4",
@@ -52,8 +52,6 @@
 		"react-transition-group": "^4.4.2",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
-		"styled-components": "^5.3.3",
-		"svg-loaders-react": "^2.2.1",
 		"swiper": "^8.1.1",
 		"universal-cookie": "^4.0.4",
 		"web-vitals": "^1.1.2"
