--- a/package.json
+++ b/package.json
@@ -105,5 +105,6 @@
 		"@storybook/testing-library": "0.0.9",
 		"uglifyjs-webpack-plugin": "^2.2.0",
 		"webpack-cli": "^4.9.1"
-	}
+	},
+	"proxy": "http://localhost:3000"
 }
