--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.26.0",
 		"axios-hooks": "^3.0.1",
+		"camelcase-keys": "^7.0.2",
 		"classnames": "^2.3.1",
 		"craco": "0.0.3",
 		"express": "^4.17.2",
