Begin migration config from mui to tailwind

--- a/package.json
+++ b/package.json
@@ -103,6 +103,9 @@
 		"@storybook/node-logger": "^6.4.19",
 		"@storybook/preset-create-react-app": "^3.2.0",
 		"@storybook/testing-library": "0.0.9",
+		"autoprefixer": "^10.4.7",
+		"postcss": "^8.4.13",
+		"tailwindcss": "^3.0.24",
 		"uglifyjs-webpack-plugin": "^2.2.0",
 		"webpack-cli": "^4.9.1"
 	},
