--- a/package.json
+++ b/package.json
@@ -1,72 +1,71 @@
 {
-  "name": "eyes-ears-front",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@apollo/client": "^3.6.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.7.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "axios-hooks": "^3.0.3",
-    "camelcase-keys": "^7.0.2",
-    "classnames": "^2.3.1",
-    "framer-motion": "^6.3.3",
-    "graphql": "^16.5.0",
-    "gsap": "file:gsap-bonus.tgz",
-    "i": "^0.3.7",
-    "jquery": "^3.6.0",
-    "locomotive-scroll": "^4.1.4",
-    "node-sass": "^7.0.1",
-    "npm": "^8.10.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-fast-marquee": "^1.3.2",
-    "react-helmet-async": "^1.3.0",
-    "react-intersection-observer": "^9.1.0",
-    "react-locomotive-scroll": "^0.2.0",
-    "react-markdown": "^8.0.3",
-    "react-marquee-slider": "^1.1.5",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.2",
-    "sass-loader": "^12.6.0",
-    "styled-components": "^5.3.5",
-    "swiper": "^8.1.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24"
-  }
+	"name": "eyes-ears-front",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@apollo/client": "^3.6.2",
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
+		"@mui/icons-material": "^5.6.2",
+		"@mui/material": "^5.7.0",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.2.0",
+		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.27.2",
+		"axios-hooks": "^3.0.3",
+		"camelcase-keys": "^7.0.2",
+		"classnames": "^2.3.1",
+		"framer-motion": "^6.3.3",
+		"graphql": "^16.5.0",
+		"gsap": "file:gsap-bonus.tgz",
+		"i": "^0.3.7",
+		"jquery": "^3.6.0",
+		"locomotive-scroll": "^4.1.4",
+		"next": "^12.1.6",
+		"node-sass": "^7.0.1",
+		"npm": "^8.10.0",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-fast-marquee": "^1.3.2",
+		"react-helmet-async": "^1.3.0",
+		"react-intersection-observer": "^9.1.0",
+		"react-locomotive-scroll": "^0.2.0",
+		"react-markdown": "^8.0.3",
+		"react-marquee-slider": "^1.1.5",
+		"react-router": "^6.3.0",
+		"react-router-dom": "^6.3.0",
+		"react-transition-group": "^4.4.2",
+		"sass-loader": "^12.6.0",
+		"styled-components": "^5.3.5",
+		"swiper": "^8.1.1",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"dev": "next dev",
+		"start": "next start",
+		"build": "next build"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.7",
+		"postcss": "^8.4.13",
+		"tailwindcss": "^3.0.24"
+	}
 }
