--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"i": "^0.3.7",
 		"jquery": "^3.6.0",
 		"locomotive-scroll": "^4.1.4",
+		"modernizr": "^3.12.0",
 		"next": "^12.1.6",
 		"node-sass": "^7.0.1",
 		"npm": "^8.10.0",
