Begin reintroducing about page

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
 		"react-marquee-slider": "^1.1.5",
 		"react-router": "^6.3.0",
 		"react-router-dom": "^6.3.0",
+		"react-slick": "^0.29.0",
 		"react-transition-group": "^4.4.2",
 		"sass-loader": "^12.6.0",
+		"slick-carousel": "^1.8.1",
 		"styled-components": "^5.3.5",
 		"swiper": "^8.1.1",
 		"web-vitals": "^2.1.4",
