--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"locomotive-scroll": "^4.1.4",
 		"modernizr": "^3.12.0",
 		"next": "^12.1.6",
+		"next-seo": "^5.4.0",
 		"node-sass": "^7.0.1",
 		"npm": "^8.10.0",
 		"qs": "^6.10.3",
