--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"modernizr": "^3.12.0",
 		"next": "^12.1.6",
 		"next-seo": "^5.4.0",
+		"next-sitemap": "^2.5.21",
 		"node-sass": "^7.0.1",
 		"npm": "^8.10.0",
 		"qs": "^6.10.3",
