--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"axios-hooks": "^3.0.3",
 		"camelcase-keys": "^7.0.2",
 		"classnames": "^2.3.1",
+		"cloudinary": "^1.30.0",
 		"framer-motion": "^6.3.3",
 		"graphql": "^16.5.0",
 		"gsap": "file:gsap-bonus.tgz",
@@ -42,6 +43,7 @@
 		"react-slick": "^0.29.0",
 		"react-transition-group": "^4.4.2",
 		"sass-loader": "^12.6.0",
+		"sharp": "^0.30.5",
 		"slick-carousel": "^1.8.1",
 		"styled-components": "^5.3.5",
 		"swiper": "^8.1.1",
