--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"private": true,
 	"dependencies": {
 		"@apollo/client": "^3.6.2",
+		"@cloudinary/react": "^1.4.1",
+		"@cloudinary/url-gen": "^1.8.0",
 		"@emotion/react": "^11.9.0",
 		"@emotion/styled": "^11.8.1",
 		"@mui/icons-material": "^5.6.2",
