--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"camelcase-keys": "^7.0.2",
 		"classnames": "^2.3.1",
 		"cloudinary": "^1.30.0",
+		"cloudinary-build-url": "^0.2.4",
 		"framer-motion": "^6.3.3",
 		"graphql": "^16.5.0",
 		"gsap": "file:gsap-bonus.tgz",
